# ascii-shape

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  activate.ps1
include/: drawing.h  geometry.h  line_drawing.h  polygon.h  rasterize.h  render.h  screen.h  shape.h
src/: drawing.cpp  geometry.cpp  line_drawing.cpp  main.cpp  polygon.cpp  rasterize.cpp  render.cpp  screen.cpp  shape.cpp
